<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addInstructionItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/addInstructionNumItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/addInstructionSingleItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Instruction" />

</LinearLayout>